<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/title_select_characteristics"
        android:textColor="@color/rw_green"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="text_hair, text_top, text_bottom, text_shoes" />

    <TextView
        android:id="@+id/text_hair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/label_hair"
        android:textSize="16sp"
        android:textColor="@color/rw_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/barrier_labels"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <Spinner
        android:id="@+id/spinner_hair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/barrier_labels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/text_hair" />

    <TextView
        android:id="@+id/text_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/label_top"
        android:textSize="16sp"
        android:textColor="@color/rw_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_hair"
        app:layout_constraintEnd_toStartOf="@+id/barrier_labels" />

    <Spinner
        android:id="@+id/spinner_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/barrier_labels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/text_top" />

    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/label_bottom"
        android:textSize="16sp"
        android:textColor="@color/rw_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/barrier_labels"
        app:layout_constraintTop_toBottomOf="@id/text_top" />

    <Spinner
        android:id="@+id/spinner_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/barrier_labels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/text_bottom" />

    <TextView
        android:id="@+id/text_shoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/label_shoes"
        android:textSize="16sp"
        android:textColor="@color/rw_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/barrier_labels"
        app:layout_constraintTop_toBottomOf="@id/text_bottom" />

    <Spinner
        android:id="@+id/spinner_shoes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/barrier_labels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/text_shoes" />

    <ImageView
        android:id="@+id/image_flag"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/button_share"
        android:layout_marginBottom="16dp"
        android:src="@drawable/img_flag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_share" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rw_green"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:text="@string/share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>